test/parsing/precedence/error-new-dot.good
error-new-dot.chpl:17: error: must use parentheses to disambiguate dot expression after 'new'
error-new-dot.chpl:19: error: must use parentheses to disambiguate dot expression after 'new'
